--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,10 +1,32 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title> OAuth를 이용한 커뮤니티 </title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <h1> 제작자 : 원주연</h1>
-</body>
-</html>
+{{>layout/header}}
+
+<div id="posts_list">
+    <table id="table" class="table table-horizontal">
+        <thead id="thead">
+        <tr>
+            <th>번호</th>
+            <th class="col-md-6 text-center">제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+            <th>조회수</th>
+        </tr>
+        </thead>
+        <tbody id="tbody">
+        {{#posts}}
+            <tr>
+                <td>{{id}}</td>
+                <td><a href="/posts/read/{{id}}">{{title}}</a></td>
+                <td>{{user}}</td>
+                <td>{{createdDate}}</td>
+                <td>{{view}}</td>
+            </tr>
+        {{/posts}}
+        </tbody>
+    </table>
+    <div class="text-right">
+        <a href="/posts/write" role="button" class="btn btn-primary bi bi-pencil-fill"> 글쓰기</a>
+    </div>
+    {{! Page }}
+    {{>posts/posts-page}}
+</div>
+{{>layout/footer}}
