게시글 작성 Front 작업 진행

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,14 +1,14 @@
 {{>layout/header}}
 
 <div id="posts_list">
-    <table id="table" class="table table-horizontal">
+    <table id="table" class="table">
         <thead id="thead">
         <tr>
-            <th>번호</th>
+            <th class="col-md-6 text-left">번호</th>
             <th class="col-md-6 text-center">제목</th>
             <th>작성자</th>
             <th>작성일</th>
-            <th>조회수</th>
+            <th class="col-md-6 text-center">조회수</th>
         </tr>
         </thead>
         <tbody id="tbody">
