--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -12,7 +12,7 @@
 <div id="header"class="d-flex bd-highlight">
     <a href="/" class="p-2 flex-grow-1 bd-highlight">Social Community</a>
     <form action="/posts/search" method="GET" class="form-inline p-2 bd-highlight" role="search">
-        <input type="text" name="keyword" class="form-control" id="search" placeholder="검색">
+        <input type="text" name="keyword" class="form-control" id="search" placeholder="keyword를 입력하세요">
         <button class="btn btn-success bi bi-search"></button>
     </form>
 </div>
