--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -3,7 +3,7 @@
 <script src="/js/app.js"></script>
 
 <footer id="footer">
-    Powered by Lee Ho Jun
+    Won ju yeon
     <a href="https://github.com/dnjswndus95/socialcommunity" target="_blank" class="bi bi-github"></a>
     <i class="bi bi-reception-4"></i>
 </footer>
