게시글 작성, 게시글 조회 구현 완료

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -16,7 +16,7 @@
             <tr>
                 <td>{{id}}</td>
                 <td><a href="/posts/read/{{id}}">{{title}}</a></td>
-                <td>{{user}}</td>
+                <td>{{user.nickname}}</td>
                 <td>{{createdDate}}</td>
                 <td>{{view}}</td>
             </tr>
