게시글 keyword 검색 기능 구현 완료

--- a/src/main/resources/templates/posts/posts-page.mustache
+++ b/src/main/resources/templates/posts/posts-page.mustache
@@ -1,10 +1,10 @@
 <div class="pagination justify-content-center">
-    {{#hasPrev}}
+    {{#hasPrevious}}
         <a href="?page={{previous}}" role="button" class="btn btn-lg bi bi-caret-left-square-fill"></a>
-    {{/hasPrev}}
-    {{^hasPrev}}
+    {{/hasPrevious}}
+    {{^hasPrevious}}
         <a href="?page={{previous}}" role="button" class="btn btn-lg bi bi-caret-left-square-fill disabled"></a>
-    {{/hasPrev}}
+    {{/hasPrevious}}
 
     {{#hasNext}}
         <a href="?page={{next}}" role="button" class="btn btn-lg bi bi-caret-right-square-fill"></a>
