댓글 등록 빈 문자열 전달 오류 수정중

--- a/src/main/resources/templates/comments/form.mustache
+++ b/src/main/resources/templates/comments/form.mustache
@@ -5,7 +5,7 @@
         <input type="hidden" id="postsId" value="{{posts.id}}">
         {{#user}}
             <div class="card-body">
-                <textarea id="comment" class="form-control" rows="4" placeholder="댓글을 입력하세요"></textarea>
+                <textarea id="content" class="form-control" rows="4" placeholder="댓글을 입력하세요"></textarea>
             </div>
             <div class="card-footer">
                 <button type="button" id="btn-comment-save"class="btn btn-outline-primary bi bi-pencil-square"> 등록</button>
