--- a/src/main/resources/templates/comments/list.mustache
+++ b/src/main/resources/templates/comments/list.mustache
@@ -9,15 +9,15 @@
                     <span style="font-size: small">{{nickname}}</span>
                     <span style="font-size: xx-small">{{createdDate}}</span>
                 </span>
-                {{#isWriter}}
+                {{#isCommentWriter}}
                     <a type="button" data-toggle="collapse" data-target=".multi-collapse-{{id}}"
                        class="bi bi-pencil-square"></a> {{! 댓글 수정 버튼 }}
                     <a type="button" onclick="main.commentDelete({{postsId}},{{id}},{{userId}},{{user.id}})"
                        class="bi bi-x-square"></a> {{! 댓글 삭제 버튼 }}
-                {{/isWriter}}
+                {{/isCommentWriter}}
 
                 {{! 댓글 내용 보기 }}
-                <p class="collapse multi-collapse-{{id}} show">{{comment}}</p>
+                <p class="collapse multi-collapse-{{id}} show">{{content}}</p>
 
                 {{! 댓글 내용 수정 }}
                 <form class="collapse multi-collapse-{{id}}">
@@ -26,7 +26,7 @@
                     <input type="hidden" id="writerUserId" value="{{userId}}">
                     <input type="hidden" id="sessionUserId" value="{{#user}}{{user.id}}{{/user}}">
                     <div class="form-group">
-                        <textarea class="form-control" id="comment-content" rows="3">{{comment}}</textarea>
+                        <textarea class="form-control" id="comment-content" rows="3">{{content}}</textarea>
                     </div>
                     <button type="button" id="btn-comment-update" class="btn btn-outline-primary bi bi-pencil-square"> 수정</button>
                 </form>
